Fixed wrapping bug on the search key

--- a/awx/ui/client/src/shared/smart-search/smart-search.block.less
+++ b/awx/ui/client/src/shared/smart-search/smart-search.block.less
@@ -186,8 +186,6 @@
 .SmartSearch-keyPane {
     max-height: 200px;
     overflow: auto;
-    display: flex;
-    flex-wrap: wrap;
     margin: 0px 0px 20px 0px;
     font-size: 12px;
     width: 100%;
